k8s/argocd/overlays/demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
