k8s/argocd/overlays/demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/managed: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: helloworld
  name: helloworld-ingress
spec:
  rules:
    - host: hellopy.tes-build-nonprod.cookidoo.vorwerk-digital.com
      http:
        paths:
          - backend:
              serviceName: helloworld-svc
              servicePort: 8443
            path: /
  tls:
    - hosts:
        - hellopy.tes-build-nonprod.cookidoo.vorwerk-digital.com
      secretName: hellopy-certificate-secret
